--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,9 +4,8 @@
     "outDir": "dist",
     "lib": ["es2023"],
     "target": "es2023",
-    "module": "esnext",
-    "moduleResolution": "node",
-    "ignoreDeprecations": "6.0",
+    "module": "node16",
+    "moduleResolution": "node16",
     "esModuleInterop": true,
     "types": ["node"]
   }
