--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,8 +4,8 @@
     "outDir": "dist",
     "lib": ["es2023"],
     "target": "es2023",
-    "module": "node16",
-    "moduleResolution": "node16",
+    "module": "es2022",
+    "moduleResolution": "node",
     "esModuleInterop": true,
     "types": ["node"]
   }
